Fix some responsive issues on mobile device
Fixed #20

--- a/components/Entry/Entry.module.css
+++ b/components/Entry/Entry.module.css
@@ -1,4 +1,20 @@
 .readMoreArea {
   display: flex;
-  gap: 10px;
+}
+
+.readMoreArea > * + * {
+  margin-left: 10px;
+}
+
+@media (max-width: 500px) {
+  .readMoreArea {
+    flex-direction: column;
+  }
+  .readMoreArea a {
+    flex: 1;
+    width: 100%;
+  }
+  .readMoreArea > * + * {
+    margin: 10px 0 0 0;
+  }
 }
