--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,9 +50,3 @@ a {
 .justify {
   text-align: justify;
 }
-
-.flex-with-space-between {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
